--- a/css/style.css
+++ b/css/style.css
@@ -605,6 +605,66 @@ section > .cont3 > ul > li > a > div.letter > p:nth-child(2) {
 	font-family: '유토';
 }
 
+section > .cont3 > .ver-pop-wrap {
+	display: none;
+	position: fixed;
+	left: 0;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 2000;
+}
+
+section > .cont3 > .ver-pop-wrap > .ver-pop-bg {
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.8;
+}
+
+section > .cont3 > .ver-pop-wrap > .ver-pop {
+	position: absolute;
+	left: 40%;
+	top: 10%;
+	width: 20%;
+	height: 80%;
+	color: #222;
+	background-image: url(./../images/iphone.png);
+	background-repeat: no-repeat;
+	background-size: contain;
+	opacity: 1;
+}
+
+section > .cont3 > .ver-pop-wrap > .ver-pop > .ver-pop-close {
+	display: block;
+	position: absolute;
+	left: 50%;
+	bottom: 55px;
+	width: 50px;
+	height: 50px;
+	margin-left: -27px;
+	text-indent: -9999px;
+	background-image: url(./../images/clos.png);
+	background-repeat: no-repeat;
+	background-size: 70%;
+	background-position: center center;
+}
+
+section > .cont3 > .ver-pop-wrap > .ver-pop > .ver-pop-cont {
+	overflow-x: hidden;
+	overflow-y: scroll;
+	position: absolute;
+	left: 5%;
+	top: 12%;
+	width: 88%;
+	height: 75%;
+	border: 1px solid #000;
+}
+section > .cont3 > .ver-pop-wrap > .ver-pop > .ver-pop-cont > img {
+	display: block;
+	width: 100%;
+}
+
 section > .cont4 {
 	position: relative;
 }
